Fix z-index for superfish menus.

--- a/style.css
+++ b/style.css
@@ -252,6 +252,11 @@ height:35px;
 float:left;
 }
 
+#superfish .region-superfish-menu {
+position:absolute;
+z-index:6;
+}
+
 #superfish h2 {
 height: 0;
 overflow: hidden;
@@ -1130,7 +1135,6 @@ li.expanded {
 list-style-image:none;
 list-style-type:none;
 margin:0.15em 0 0.15em 0.5em;
-padding:0 0 0.2em 1.5em;
 }
 
 div.links ul.links a {
